--- a/index2.html
+++ b/index2.html
@@ -6,12 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hello man
-        
+    <p>
+        hello man
     </p>
 
     <p>
-        This is a new Feature
+        This is a new Feature (button)
     </p>
     
 </body>
